add EP of department
