# app/serializers/api/v1/department_serializer.rb
@@ -1,0 +1,6 @@
+class Api::V1::DepartmentSerializer < Api::V1::ApplicationSerializer
+  attributes :id,
+             :name,
+             :created_at,
+             :updated_at
+end
